--- a/home.html
+++ b/home.html
@@ -636,6 +636,144 @@
 
     </section>
 
+    <section id="popular">
+      <div class="headPopular">
+        <p>Postingan berdasarkan:</p>
+        <h2>Comment Terbanyak</h2>
+      </div>
+      <div class="tabCategory">
+        <div class="row">
+          <div class="col-md-4">
+            <div class="categoriesSosmed">
+              <div class="media">
+                <div class="media-left">
+                  <a href="#">
+                    <img class="media-object" src="assets/img/imsges.png">
+                  </a>
+                </div>
+                <div class="media-body">
+                  <h4 class="media-heading">Total Foto</h4>
+                  <p>50K</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="categoriesSosmed">
+              <div class="media">
+                <div class="media-left">
+                  <a href="#">
+                    <img class="media-object" src="assets/img/video.png">
+                  </a>
+                </div>
+                <div class="media-body">
+                  <h4 class="media-heading">Total Video</h4>
+                  <p>25K</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="categoriesSosmed">
+              <div class="media">
+                <div class="media-left">
+                  <a href="#">
+                    <img class="media-object" src="assets/img/IGTV.png">
+                  </a>
+                </div>
+                <div class="media-body">
+                  <h4 class="media-heading">IGTV</h4>
+                  <p>25K</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="tableComment">
+        <div class="row">
+        <div class="col-xs-12">
+          <div class="box">
+            <!-- /.box-header -->
+            <div class="box-body table-responsive no-padding">
+              <table class="table table-hover">
+                <tr>
+                  <th>No</th>
+                  <th>Post</th>
+                  <th>Username</th>
+                  <th>Total Like</th>
+                  <th>Waktu Posting</th>
+                  <th>Detail</th>
+                </tr>
+                <tr>
+                  <td>1</td>
+                  <td>
+                    <img src="assets/img/cherries.jpg">
+                  </td>
+                  <td>
+                    <p class="username">@miftahSHOP</p>
+                  </td>
+                  <td>
+                    <span class="totalLikes">500K</span>
+                  </td>
+                  <td>
+                    <span class="timePosting">09.30</span>
+                  </td>
+                  <td>
+                    <button class="btn btnDetail">Lihat Detail</button>
+                  </td>
+                </tr>
+                <tr>
+                  <td>2</td>
+                  <td>
+                    <img src="assets/img/cherries.jpg">
+                  </td>
+                  <td>
+                    <p class="username">@sigitShop</p>
+                  </td>
+                  <td>
+                    <span class="totalLikes">200K</span>
+                  </td>
+                  <td>
+                    <span class="timePosting">08.50</span>
+                  </td>
+                  <td>
+                    <button class="btn btnDetail">Lihat Detail</button>
+                  </td>
+                </tr>
+                <tr>
+                  <td>3</td>
+                  <td>
+                    <img src="assets/img/cherries.jpg">
+                  </td>
+                  <td>
+                    <p class="username">@OlaShop</p>
+                  </td>
+                  <td>
+                    <span class="totalLikes">150K</span>
+                  </td>
+                  <td>
+                    <span class="timePosting">08.20</span>
+                  </td>
+                  <td>
+                    <button class="btn btnDetail">Lihat Detail</button>
+                  </td>
+                </tr>
+              </table>
+              <div class="pagingTable">
+                <p><i class="fa fa-angle-left" aria-hidden="true"></i> &nbsp; Showing 1 of 25 topics &nbsp; <i class="fa fa-angle-right" aria-hidden="true"></i></p>
+              </div>
+            </div>
+            <!-- /.box-body -->
+          </div>
+          <!-- /.box -->
+        </div>
+      </div>
+      </div>
+
+    </section>
+
 
 
     
