--- a/home.html
+++ b/home.html
@@ -367,6 +367,11 @@
           <div class="box-body chart-responsive">
             <div class="chart" id="line-chart" style="height: 300px;"></div>
           </div>
+          <div class="detailGrafik">
+            <div class="btndetailGrafik" data-toggle="modal" data-target="#modaldetailGrafik">
+              <p>Lihat Detail</p>
+            </div>
+          </div>
         </div>
       </div>
     </section>
@@ -782,6 +787,83 @@
   <!-- /.content-wrapper -->
 
   <div class="control-sidebar-bg"></div>
+</div>
+
+
+<div class="modal fade" id="modaldetailGrafik" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <!-- <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div> -->
+      <div class="modal-body">
+        <div class="headpopupgrafik">
+          <p>DETAIL</p>
+        </div>
+        <div class="titlepopupgrafik">
+          <h2>Baju kaos Instagram untuk pecinta instagram</h2>
+        </div>
+        <div class="secvalue">
+          <div class="valleft">
+            <p><i class="fa fa-thumbs-o-up" aria-hidden="true"></i> <span>Date:</span> 01-01-2020</p>
+          </div>
+          <div class="valright">
+            <p><i class="fa fa-comment" aria-hidden="true"></i> <span>Time:</span> 09.30</p>
+          </div>
+        </div>
+        <div class="coliconspopup">
+          <h2>Jumlah Posting</h2>
+          <div class="col-icon-popup">
+            <div class="iconPopup">
+              <div class="media">
+                <div class="media-left">
+                  <a href="#">
+                    <img class="media-object" src="assets/img/imsges.png">
+                  </a>
+                </div>
+                <div class="media-body">
+                  <h4 class="media-heading">Total Foto</h4>
+                  <p>50K</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-icon-popup">
+            <div class="iconPopup">
+              <div class="media">
+                <div class="media-left">
+                  <a href="#">
+                    <img class="media-object" src="assets/img/video.png">
+                  </a>
+                </div>
+                <div class="media-body">
+                  <h4 class="media-heading">Total Foto</h4>
+                  <p>50K</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-icon-popup">
+            <div class="iconPopup">
+              <div class="media">
+                <div class="media-left">
+                  <a href="#">
+                    <img class="media-object" src="assets/img/IGTV.png">
+                  </a>
+                </div>
+                <div class="media-body">
+                  <h4 class="media-heading">Total Foto</h4>
+                  <p>50K</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 
 <div class="modal fade" id="modalIG" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
