--- a/search.html
+++ b/search.html
@@ -404,6 +404,244 @@
           </div>
         </div>
       </div>
+
+      <br>
+
+      <div class="chart">
+        <div class="textHeadSearch">
+          <h2>Keyword Ideas</h2>
+        </div>
+
+        <ul class="nav nav-tabs">
+          <li class="active"><a data-toggle="tab" href="#homet">Organic Keyword</a></li>
+          <li><a data-toggle="tab" href="#menu3">Ads Keyword</a></li>
+          <li><a data-toggle="tab" href="#menu4">Related Keyword</a></li>
+          <li><a data-toggle="tab" href="#menu5">Suggestion Keyword</a></li>
+        </ul>
+
+        <div class="tab-content">
+          <div id="homet" class="tab-pane fade in active">
+            <div class="box">
+              <!-- /.box-header -->
+              <div class="box-body table-responsive no-padding">
+                <table class="table table-hover">
+                  <tr>
+                    <th>No</th>
+                    <th>Keyword</th>
+                    <th>Volume</th>
+                    <th>CPC</th>
+                  </tr>
+                  <tr>
+                    <td>1</td>
+                    <td>
+                      <p class="username">Clothing - Topic</p>
+                    </td>
+                    <td>
+                      <p class="username">110.000</p>
+                    </td>
+                    <td>
+                      <span class="totalLikes">Rp 831.10</span>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>2</td>
+                    <td>
+                      <p class="username">Model - Person</p>
+                    </td>
+                    <td>
+                      <p class="username">110.000</p>
+                    </td>
+                    <td>
+                      <span class="totalLikes">Rp 831.10</span>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>3</td>
+                    <td>
+                      <p class="username">Thawb - Garment</p>
+                    </td>
+                    <td>
+                      <p class="username">110.000</p>
+                    </td>
+                    <td>
+                      <span class="totalLikes">Rp 831.10</span>
+                    </td>
+                  </tr>
+                </table>
+                <br>
+                <div class="pagingTable text-center">
+                  <p><i class="fa fa-angle-left" aria-hidden="true"></i> &nbsp; Showing 1 of 25 topics &nbsp; <i class="fa fa-angle-right" aria-hidden="true"></i></p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div id="menu3" class="tab-pane fade">
+            <div class="box">
+              <!-- /.box-header -->
+              <div class="box-body table-responsive no-padding">
+                <table class="table table-hover">
+                  <tr>
+                    <th>No</th>
+                    <th>Keyword</th>
+                    <th>Volume</th>
+                    <th>CPC</th>
+                  </tr>
+                  <tr>
+                    <td>1</td>
+                    <td>
+                      <p class="username">Clothing - Topic</p>
+                    </td>
+                    <td>
+                      <p class="username">110.000</p>
+                    </td>
+                    <td>
+                      <span class="totalLikes">Rp 831.10</span>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>2</td>
+                    <td>
+                      <p class="username">Model - Person</p>
+                    </td>
+                    <td>
+                      <p class="username">110.000</p>
+                    </td>
+                    <td>
+                      <span class="totalLikes">Rp 831.10</span>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>3</td>
+                    <td>
+                      <p class="username">Thawb - Garment</p>
+                    </td>
+                    <td>
+                      <p class="username">110.000</p>
+                    </td>
+                    <td>
+                      <span class="totalLikes">Rp 831.10</span>
+                    </td>
+                  </tr>
+                </table>
+                <br>
+                <div class="pagingTable text-center">
+                  <p><i class="fa fa-angle-left" aria-hidden="true"></i> &nbsp; Showing 1 of 25 topics &nbsp; <i class="fa fa-angle-right" aria-hidden="true"></i></p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div id="menu4" class="tab-pane fade">
+            <div class="box">
+              <!-- /.box-header -->
+              <div class="box-body table-responsive no-padding">
+                <table class="table table-hover">
+                  <tr>
+                    <th>No</th>
+                    <th>Keyword</th>
+                    <th>Volume</th>
+                    <th>CPC</th>
+                  </tr>
+                  <tr>
+                    <td>1</td>
+                    <td>
+                      <p class="username">Clothing - Topic</p>
+                    </td>
+                    <td>
+                      <p class="username">110.000</p>
+                    </td>
+                    <td>
+                      <span class="totalLikes">Rp 831.10</span>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>2</td>
+                    <td>
+                      <p class="username">Model - Person</p>
+                    </td>
+                    <td>
+                      <p class="username">110.000</p>
+                    </td>
+                    <td>
+                      <span class="totalLikes">Rp 831.10</span>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>3</td>
+                    <td>
+                      <p class="username">Thawb - Garment</p>
+                    </td>
+                    <td>
+                      <p class="username">110.000</p>
+                    </td>
+                    <td>
+                      <span class="totalLikes">Rp 831.10</span>
+                    </td>
+                  </tr>
+                </table>
+                <br>
+                <div class="pagingTable text-center">
+                  <p><i class="fa fa-angle-left" aria-hidden="true"></i> &nbsp; Showing 1 of 25 topics &nbsp; <i class="fa fa-angle-right" aria-hidden="true"></i></p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div id="menu5" class="tab-pane fade">
+            <div class="box">
+              <!-- /.box-header -->
+              <div class="box-body table-responsive no-padding">
+                <table class="table table-hover">
+                  <tr>
+                    <th>No</th>
+                    <th>Keyword</th>
+                    <th>Volume</th>
+                    <th>CPC</th>
+                  </tr>
+                  <tr>
+                    <td>1</td>
+                    <td>
+                      <p class="username">Clothing - Topic</p>
+                    </td>
+                    <td>
+                      <p class="username">110.000</p>
+                    </td>
+                    <td>
+                      <span class="totalLikes">Rp 831.10</span>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>2</td>
+                    <td>
+                      <p class="username">Model - Person</p>
+                    </td>
+                    <td>
+                      <p class="username">110.000</p>
+                    </td>
+                    <td>
+                      <span class="totalLikes">Rp 831.10</span>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>3</td>
+                    <td>
+                      <p class="username">Thawb - Garment</p>
+                    </td>
+                    <td>
+                      <p class="username">110.000</p>
+                    </td>
+                    <td>
+                      <span class="totalLikes">Rp 831.10</span>
+                    </td>
+                  </tr>
+                </table>
+                <br>
+                <div class="pagingTable text-center">
+                  <p><i class="fa fa-angle-left" aria-hidden="true"></i> &nbsp; Showing 1 of 25 topics &nbsp; <i class="fa fa-angle-right" aria-hidden="true"></i></p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
     <!-- /.content -->
